
Version 7.5  [ TODO ]

    GENERAL:
        - Begun a move to use C++20 concepts and constraints instead of plain
          English requirements for template arguments.  This is an ongoing
          project.  As a result, many constraints on template arguments are
          now enforced by the compiler.
        - More use of constexpr throughout the calculation engine.
    ENGINE:
        Class Cut:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Class FixedArray:
            - Now has a default constructor that creates an empty array.
        Class GroupExpressionTerm, GroupExpression, GroupPresentation,
                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.
        Class Laurent<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class LPCol<...>:
            - This is now an internal class in the namespace regina::detail,
              and its template parameters have changed.  End users should have
              no need to refer to LPCol<...> at all.
        Class LPConstraint...:
            - All linear programming constraint classes must now adhere to the
              new concept LPConstraint.
            - The constant nConstraints and the routine constrain() are both
              removed, and replaced with the class constant array constraints[].
            - The arguments to addRows() have changed: it no longer takes an
              initial tableaux, but instead takes the relevant triangulation
              and column permutation.
        Class LPConstraintAPI, LPConstraintBase, LPConstraintSubspace: