@@ -107,7 +107,7 @@ namespace detail {
  * End users should call binomSmall() instead of referring to this array
  * directly.
  *
- * \ingroup maths
+ * \ingroup detail
  */
 inline constexpr int binomSmall_[17][17] = {
     {1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0},
